# obj-loader

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: obj-loader.cpp  uvmap.DDS
